[fix] CodeBlock pre tag overflowing styles

--- a/aim/web/ui/src/components/kit/DataList/DataList.scss
+++ b/aim/web/ui/src/components/kit/DataList/DataList.scss
@@ -57,7 +57,7 @@
         &:last-child {
           display: inline-block;
           border-right: none;
-          white-space: nowrap;
+          white-space: normal;
           overflow: auto !important;
         }
       }
